--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Markdown – Eine kurze Einführung (reveal.js Vorlage)</title>
 
     <!-- Reveal.js core CSS & Theme (über CDN, offline später leicht ersetzbar) -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5/dist/moon.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5/dist/theme/league.css" id="theme">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5/dist/reveal.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5/dist/theme/moon.css" id="theme">
 
     <!-- Optional: Code-Highlighting Theme -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5/plugin/highlight/monokai.css">
