--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!-- Reveal.js core CSS & Theme (über CDN, offline später leicht ersetzbar) -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5/dist/reveal.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5/dist/theme/black.css" id="theme">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5/dist/theme/beige.css" id="theme">
 
     <!-- Optional: Code-Highlighting Theme -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5/plugin/highlight/monokai.css">
@@ -49,7 +49,7 @@
         transition: 'slide', // 'none', 'fade', 'slide', 'convex', 'concave', 'zoom'
         plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ],
         // Präsentationsgröße (automatisch) – kann bei Bedarf gesetzt werden
-        width: 1920, height: 1080,
+        // width: 1920, height: 1080,
       });
       deck.initialize();
     </script>
