--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         transition: 'slide', // 'none', 'fade', 'slide', 'convex', 'concave', 'zoom'
         plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ],
         // Präsentationsgröße (automatisch) – kann bei Bedarf gesetzt werden
-        // width: 1920, height: 1080,
+        width: 1600, height: 1080,
       });
       deck.initialize();
     </script>
