--- a/index.html
+++ b/index.html
@@ -1,60 +1,49 @@
-
 <!doctype html>
 <html lang="de">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Markdown – Eine kurze Einführung (reveal.js Vorlage)</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Eine kurze Einführung in Markdown – Reveal.js</title>
 
-    <!-- Reveal.js core CSS & Theme (über CDN, offline später leicht ersetzbar) -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5/dist/reveal.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5/dist/theme/dracula.css" id="theme">
+    <!-- Reveal.js core CSS & Theme from CDN (works on GitHub Pages) -->
+    <link rel="stylesheet" href="https://unpkg.com/reveal.js@^5/dist/reveal.css" />
+    <link rel="stylesheet" href="https://unpkg.com/reveal.js@^5/dist/theme/white.css" id="theme" />
 
-    <!-- Eigene CSS-Erweiterungen -->
-    <link rel="stylesheet" href="custom.css">
-
-    <!-- Optional: Code-Highlighting Theme -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5/plugin/highlight/monokai.css">
-
-    <style>
-      :root { --brand: #005a9e; }
-      .reveal h1, .reveal h2, .reveal h3 { color: var(--brand); }
-      .reveal pre code { font-size: 0.9em; }
-      .badge { display:inline-block; padding: .2em .5em; border-radius: .3em; background:#eee; }
-    </style>
+    <!-- Custom overrides -->
+    <link rel="stylesheet" href="custom.css" />
   </head>
   <body>
     <div class="reveal">
       <div class="slides">
-        <!-- Wir nutzen Markdown als Quelle. Diese Sektion lädt slides.md. -->
-        <section data-markdown="slides.md"
-                 data-separator="^---$"
-                 data-separator-vertical="^--$"
-                 data-separator-notes="^Note:"
-                 data-charset="utf-8">
+        <!-- Load slides from Markdown file -->
+        <section
+          data-markdown="slides.md"
+          data-separator="^---$"
+          data-separator-vertical="^--$"
+          data-separator-notes="^Note:"
+          data-charset="utf-8">
         </section>
       </div>
     </div>
 
     <!-- Reveal.js core JS -->
-    <script src="https://cdn.jsdelivr.net/npm/reveal.js@5/dist/reveal.js"></script>
-
-    <!-- Plugins: Markdown, Highlight, Notes -->
-    <script src="https://cdn.jsdelivr.net/npm/reveal.js@5/plugin/markdown/markdown.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/reveal.js@5/plugin/highlight/highlight.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/reveal.js@5/plugin/notes/notes.js"></script>
+    <script src="https://unpkg.com/reveal.js@^5/dist/reveal.js"></script>
+    <!-- Plugins: Markdown, Notes, Highlight -->
+    <script src="https://unpkg.com/reveal.js@^5/plugin/markdown/markdown.js"></script>
+    <script src="https://unpkg.com/reveal.js@^5/plugin/notes/notes.js"></script>
+    <script src="https://unpkg.com/reveal.js@^5/plugin/highlight/highlight.js"></script>
 
     <script>
-      // Reveal-Initialisierung
-      let deck = new Reveal({
+      // Initialize Reveal
+      Reveal.initialize({
         hash: true,
-        slideNumber: true,
-        transition: 'slide', // 'none', 'fade', 'slide', 'convex', 'concave', 'zoom'
-        plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ],
-        // Präsentationsgröße (automatisch) – kann bei Bedarf gesetzt werden
-        // width: 1600, height: 1080,
+        slideNumber: 'c/t',
+        transition: 'fade',
+        plugins: [ RevealMarkdown, RevealNotes, RevealHighlight ],
+        markdown: {
+          smartypants: true
+        }
       });
-      deck.initialize();
     </script>
   </body>
 </html>
