--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <!-- Reveal.js core CSS & Theme -->
     <link rel="stylesheet" href="https://unpkg.com/reveal.js@^5/dist/reveal.css" />
-    <link rel="stylesheet" href="https://unpkg.com/reveal.js@^5/dist/theme/white.css" id="theme" />
+    <link rel="stylesheet" href="https://unpkg.com/reveal.js@^5/dist/theme/dracula.css" id="theme" />
 
     <!-- Custom overrides -->
     <link rel="stylesheet" href="custom.css" />
