--- a/index.html
+++ b/index.html
@@ -1,45 +1,34 @@
 <!doctype html>
-<html lang="de">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Markdown – Zweispaltig (getrennte Blöcke) · Reveal.js</title>
-
-    <!-- Reveal.js core CSS & Theme -->
-    <link rel="stylesheet" href="https://unpkg.com/reveal.js@^5/dist/reveal.css" />
-    <link rel="stylesheet" href="https://unpkg.com/reveal.js@^5/dist/theme/dracula.css" id="theme" />
-
-    <!-- Custom overrides -->
-    <link rel="stylesheet" href="custom.css" />
-  </head>
-  <body>
-    <div class="reveal">
-      <div class="slides">
-        <section
-          data-markdown="slides.md"
-          data-separator="^---$"
-          data-separator-vertical="^--$"
-          data-separator-notes="^Note:"
-          data-charset="utf-8">
-        </section>
-      </div>
-    </div>
-
-    <!-- Reveal.js core JS -->
-    <script src="https://unpkg.com/reveal.js@^5/dist/reveal.js"></script>
-    <!-- Plugins -->
-    <script src="https://unpkg.com/reveal.js@^5/plugin/markdown/markdown.js"></script>
-    <script src="https://unpkg.com/reveal.js@^5/plugin/notes/notes.js"></script>
-    <script src="https://unpkg.com/reveal.js@^5/plugin/highlight/highlight.js"></script>
-
-    <script>
-      Reveal.initialize({
-        hash: true,
-        slideNumber: 'c/t',
-        transition: 'fade',
-        plugins: [ RevealMarkdown, RevealNotes, RevealHighlight ],
-        markdown: { smartypants: true }
-      });
-    </script>
-  </body>
+<html lang='de'>
+<head>
+  <meta charset='utf-8'>
+  <meta name='viewport' content='width=device-width, initial-scale=1'>
+  <title>Markdown – Zweispaltig (Blocklayout) · Reveal.js</title>
+  <link rel='stylesheet' href='https://unpkg.com/reveal.js@^5/dist/reveal.css'>
+  <link rel='stylesheet' href='https://unpkg.com/reveal.js@^5/dist/theme/white.css'>
+  <link rel='stylesheet' href='custom.css'>
+</head>
+<body>
+<div class='reveal'>
+  <div class='slides'>
+    <section data-markdown='slides.md'
+      data-separator='^---$'
+      data-separator-vertical='^--$'
+      data-separator-notes='^Note:'
+      data-charset='utf-8'></section>
+  </div>
+</div>
+<script src='https://unpkg.com/reveal.js@^5/dist/reveal.js'></script>
+<script src='https://unpkg.com/reveal.js@^5/plugin/markdown/markdown.js'></script>
+<script src='https://unpkg.com/reveal.js@^5/plugin/notes/notes.js'></script>
+<script src='https://unpkg.com/reveal.js@^5/plugin/highlight/highlight.js'></script>
+<script>
+Reveal.initialize({
+  hash: true,
+  slideNumber: 'c/t',
+  transition: 'fade',
+  plugins: [RevealMarkdown, RevealNotes, RevealHighlight]
+});
+</script>
+</body>
 </html>
