--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name='viewport' content='width=device-width, initial-scale=1'>
   <title>Markdown – Zweispaltig (Blocklayout) · Reveal.js</title>
   <link rel='stylesheet' href='https://unpkg.com/reveal.js@^5/dist/reveal.css'>
-  <link rel='stylesheet' href='https://unpkg.com/reveal.js@^5/dist/theme/white.css'>
+  <link rel='stylesheet' href='https://unpkg.com/reveal.js@^5/dist/theme/dracula.css'>
   <link rel='stylesheet' href='custom.css'>
 </head>
 <body>
